[gd_scene load_steps=7 format=3 uid="uid://dunskxiqyj5jc"]

[ext_resource type="Script" uid="uid://coiale1i1dxiw" path="res://ui/dungeon_hud/dungeon_hud.gd" id="1_tqvi7"]
[ext_resource type="Texture2D" uid="uid://ddqu87arokdpm" path="res://ui/elements/ui_icons_8x8/icon_location.tres" id="2_l2hnv"]
[ext_resource type="Texture2D" uid="uid://dmeuqpwwh56op" path="res://ui/dungeon_hud/weather_sunny.tres" id="2_lkvbs"]
[ext_resource type="Texture2D" uid="uid://cdso7ulm3rf70" path="res://ui/dungeon_hud/time_morning.tres" id="2_s6u2v"]
[ext_resource type="TileSet" uid="uid://d01bxnxumace6" path="res://ui/dungeon_hud/minimap/hud_tileset.tres" id="5_ggwmo"]
[ext_resource type="PackedScene" uid="uid://dgsc7kjgxh6ce" path="res://ui/elements/fps_counter.tscn" id="6_l4mkv"]

[node name="DungeonHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tqvi7")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -82.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = 20.0
grow_horizontal = 0
theme_override_constants/separation = 2

[node name="WeatherContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
theme_type_variation = &"TransparentPanelContainer"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/WeatherContainer"]
layout_mode = 2

[node name="WeatherTexture" type="TextureRect" parent="HBoxContainer/WeatherContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_lkvbs")
stretch_mode = 3

[node name="TimeTexture" type="TextureRect" parent="HBoxContainer/WeatherContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_s6u2v")
stretch_mode = 3

[node name="LocationContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
theme_type_variation = &"TransparentPanelContainer"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/LocationContainer"]
layout_mode = 2

[node name="LocationTexture" type="TextureRect" parent="HBoxContainer/LocationContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_l2hnv")
stretch_mode = 3

[node name="DungeonLabel" type="Label" parent="HBoxContainer/LocationContainer/HBoxContainer"]
layout_mode = 2
text = "Dungeon"

[node name="FloorLabel" type="Label" parent="HBoxContainer/LocationContainer/HBoxContainer"]
layout_mode = 2
text = "B1"

[node name="TileMap" type="Control" parent="."]
anchors_preset = 0
offset_left = 204.0
offset_top = 102.0
offset_right = 212.0
offset_bottom = 110.0

[node name="Terrain" type="TileMapLayer" parent="TileMap"]
modulate = Color(1, 1, 1, 0.5882353)
use_parent_material = true
tile_set = ExtResource("5_ggwmo")

[node name="Entities" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_set = ExtResource("5_ggwmo")

[node name="FPSCounter" parent="." instance=ExtResource("6_l4mkv")]
layout_mode = 1
anchors_preset = 2
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = -2.0
grow_horizontal = 1
grow_vertical = 0

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 71.0
offset_bottom = 20.0
theme_type_variation = &"TransparentPanelContainer"

[node name="StatsLabel" type="Label" parent="PanelContainer"]
layout_mode = 2
text = "20HP / 10AP"
